--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+
 <body>
-    
+
+ 
+ 
+ 
+<header>
+
+
+</header>
+
+
+ <main></main>
+
+
+
+
+
+<footer></footer>
+
+
+
+
+
 </body>
+
+
 </html>
