--- a/index.html
+++ b/index.html
@@ -10,14 +10,45 @@
 
 <body>
 
- 
- 
- 
-<header>
+ <header>
 
+<nav>
+    
+    <ul>
+    <li> <a href="">WebStudio</a> </li>
+    <li> <a href="">Студия</a> </li>
+    <li> <a href="">Портфолио</a> </li>
+    <li> <a href="">Контакты</a> </li>
+    </ul>
+
+</nav>
+
+<!-- Заменить тег div!!!!! -->
+<ul>
+<li>
+    <img src="./images/envelope.png" alt="Mail">
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+
+</li>
+
+ <li>
+<img src="./images/Tel.png" alt="Phone">
+<a href="tel:+380961111111">+38 096 111 11 11</a>
+    </li>
+</ul>
 
 </header>
 
+<section>
+    <h1>
+        Эффективные решения для вашего бизнеса
+    </h1>
+    <a href="">Заказать услугу</a>
+</section>
+
+<section>
+    
+</section>
 
  <main></main>
 
