--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <section>
 
-    <h3>Чем мы занимаемся</h3>
+    <h2>Чем мы занимаемся</h2>
 
  <ul>
 
@@ -116,29 +116,29 @@
 </section>
 
 <section>
-    <h3>Наша команда</h3>
+    <h2>Наша команда</h2>
     <ul>
         <li>
             <img src="./images/Igor-Demyanenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
-            <h4>Игорь Демьяненко</h4>
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
         </li>
         
         <li>
             <img src="./images/Olga-Repina.jpg" alt="Ольга Репина" width="270" height="260">
-            <h4>Ольга Репина</h4>
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
         </li>
 
         <li>
             <img src="./images/Nikolai-Tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
-            <h4>Николай Тарасов</h4>
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
         </li>
 
         <li>
             <img src="./images/Mikhail-Ermakovjpg.jpg" alt="Михаил Ермаков" width="270" height="260">
-            <h4>Михаил Ермаков</h4>
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
         </li>
 
@@ -154,7 +154,7 @@
 
 <footer>
 <a href="">WebStudio</a>
-    <address id="contacts">
+    <address>
     <ul>
         <li><a href="https://goo.gl/maps/E31LjMS4C6WuwfjZA" target="_blank" rel="noopener nofollow noreferrer">г. Киев,
                 пр-т Леси Украинки, 26</a></li>
